--- a/DprintPluginRoslyn/DprintPluginRoslyn.csproj
+++ b/DprintPluginRoslyn/DprintPluginRoslyn.csproj
@@ -6,6 +6,9 @@
     <RootNamespace>Dprint.Plugins.Roslyn</RootNamespace>
     <AssemblyName>dprint-plugin-roslyn</AssemblyName>
     <Nullable>enable</Nullable>
+    <Version>3.6.0</Version>
+    <Authors>David Sherret</Authors>
+    <Company>Dprint Code Formatting</Company>
   </PropertyGroup>
 
   <ItemGroup>
