--- a/DprintPluginRoslyn/DprintPluginRoslyn.csproj
+++ b/DprintPluginRoslyn/DprintPluginRoslyn.csproj
@@ -6,13 +6,13 @@
     <RootNamespace>Dprint.Plugins.Roslyn</RootNamespace>
     <AssemblyName>dprint-plugin-roslyn</AssemblyName>
     <Nullable>enable</Nullable>
-    <Version>0.1.0</Version>
+    <Version>0.2.0</Version>
     <Authors>David Sherret</Authors>
     <Company>Dprint Code Formatting</Company>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="LICENSE" />
+    <EmbeddedResource Include="../LICENSE" />
   </ItemGroup>
 
   <ItemGroup>
