--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
     - name: Get plugin file checksum
       if: startsWith(github.ref, 'refs/tags/')
       id: get_plugin_file_checksum
-      run: echo "::set-output name=CHECKSUM::$(shasum -a 256 roslyn.exe-plugin | awk '{print $1}')"
+      run: echo "::set-output name=CHECKSUM::$(shasum -a 256 plugin.exe-plugin | awk '{print $1}')"
 
     - name: Release
       uses: softprops/action-gh-release@v1
@@ -52,7 +52,7 @@ jobs:
           dprint-plugin-roslyn-x86_64-apple-darwin.zip
           dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip
           dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip
-          roslyn.exe-plugin
+          plugin.exe-plugin
         body: |
           ## Install
 
