--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,27 +10,28 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
+    - uses: denoland/setup-deno@v1
     - name: Setup .net
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x'
+        dotnet-version: '6.0.x'
 
     - name: Build
       run: |
-        dotnet build -c Release --runtime win-x64
-        dotnet build -c Release --runtime linux-x64
-        dotnet build -c Release --runtime osx-x64
+        dotnet build DprintPluginRoslyn -c Release --runtime win-x64
+        dotnet build DprintPluginRoslyn -c Release --runtime linux-x64
+        dotnet build DprintPluginRoslyn -c Release --runtime osx-x64
 
     - name: Package
       run: |
-        cd DprintPluginRoslyn/bin/Release/netcoreapp3.1/osx-x64
+        cd DprintPluginRoslyn/bin/Release/net6.0/osx-x64
         zip -r ../../../../../dprint-plugin-roslyn-x86_64-apple-darwin.zip ./*
         cd ../linux-x64
         zip -r ../../../../../dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip ./*
         cd ../win-x64
         zip -r ../../../../../dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip ./*
     - name: Create plugin file
-      run: node scripts/createPluginFile.js
+      run: deno run --allow-read=. --allow-write=. scripts/create_plugin_file.js
 
     - name: Get tag version
       if: startsWith(github.ref, 'refs/tags/')
