--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,9 @@ jobs:
       with:
         dotnet-version: '6.0.x'
 
+    - name: Test
+      run: dotnet test
+
     - name: Build
       run: |
         dotnet build DprintPluginRoslyn -c Release --runtime win-x64
