--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,13 +17,17 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v2
     - uses: denoland/setup-deno@v1
-    - name: Setup .net
-      uses: actions/setup-dotnet@v1
+    - uses: dtolnay/rust-toolchain@stable
+    - uses: Swatinem/rust-cache@v1
+    - uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '6.0.x'
 
     - name: Test
       run: dotnet test
+
+    - name: Test Exe
+      run: cd test && cargo test
 
     - name: Build
       run: |
