--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,13 +23,16 @@ jobs:
       with:
         dotnet-version: '6.0.x'
 
+    - name: Build (Debug)
+      run: dotnet build DprintPluginRoslyn
+
     - name: Test
       run: dotnet test
 
     - name: Test Exe
       run: cd test && cargo test
 
-    - name: Build
+    - name: Build (Release)
       run: |
         dotnet build DprintPluginRoslyn -c Release --runtime win-x64
         dotnet build DprintPluginRoslyn -c Release --runtime linux-x64
