--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  pull_request:
+    branches: [main]
+  push:
+    branches: [main]
+    tags:
+    - '*'
 
 jobs:
   build:
@@ -10,27 +16,38 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v2
-    - name: Setup .net
-      uses: actions/setup-dotnet@v1
+    - uses: denoland/setup-deno@v1
+    - uses: dtolnay/rust-toolchain@stable
+    - uses: Swatinem/rust-cache@v1
+    - uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '3.1.x'
+        dotnet-version: '6.0.x'
 
-    - name: Build
+    - name: Build (Debug)
+      run: dotnet build DprintPluginRoslyn
+
+    - name: Test
+      run: dotnet test
+
+    - name: Test Exe
+      run: cd test && cargo test
+
+    - name: Build (Release)
       run: |
-        dotnet build -c Release --runtime win-x64
-        dotnet build -c Release --runtime linux-x64
-        dotnet build -c Release --runtime osx-x64
+        dotnet build DprintPluginRoslyn -c Release --runtime win-x64
+        dotnet build DprintPluginRoslyn -c Release --runtime linux-x64
+        dotnet build DprintPluginRoslyn -c Release --runtime osx-x64
 
     - name: Package
       run: |
-        cd DprintPluginRoslyn/bin/Release/netcoreapp3.1/osx-x64
+        cd DprintPluginRoslyn/bin/Release/net6.0/osx-x64
         zip -r ../../../../../dprint-plugin-roslyn-x86_64-apple-darwin.zip ./*
         cd ../linux-x64
         zip -r ../../../../../dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip ./*
         cd ../win-x64
         zip -r ../../../../../dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip ./*
     - name: Create plugin file
-      run: node scripts/createPluginFile.js
+      run: deno run --allow-read=. --allow-write=. scripts/create_plugin_file.ts
 
     - name: Get tag version
       if: startsWith(github.ref, 'refs/tags/')
