--- a/test/Cargo.toml
+++ b/test/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-dprint-core = { version = "0.52.1", features = ["process"] }
+dprint-core = { version = "0.53.1", features = ["process"] }
 rand = "0.8.5"
-tokio = { version = "1", features = ["full"] }
+tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros"] }
 tokio-util = "0.7.0"
 futures = "0.3.21"
