--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,14 +34,17 @@ jobs:
 
     - name: Build (Release)
       run: |
-        dotnet build DprintPluginRoslyn -c Release --runtime win-x64
-        dotnet build DprintPluginRoslyn -c Release --runtime linux-x64
-        dotnet build DprintPluginRoslyn -c Release --runtime osx-x64
+        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime win-x64
+        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime linux-x64
+        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx-x64
+        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx.12-arm64
 
     - name: Package
       run: |
         cd DprintPluginRoslyn/bin/Release/net6.0/osx-x64
         zip -r ../../../../../dprint-plugin-roslyn-x86_64-apple-darwin.zip ./*
+        cd DprintPluginRoslyn/bin/Release/net6.0/osx.12-arm64
+        zip -r ../../../../../dprint-plugin-roslyn-aarch64-apple-darwin.zip ./*
         cd ../linux-x64
         zip -r ../../../../../dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip ./*
         cd ../win-x64
@@ -67,6 +70,7 @@ jobs:
       with:
         files: |
           dprint-plugin-roslyn-x86_64-apple-darwin.zip
+          dprint-plugin-roslyn-aarch64-apple-darwin.zip
           dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip
           dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip
           plugin.exe-plugin
