--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,14 +41,11 @@ jobs:
 
     - name: Package
       run: |
-        cd DprintPluginRoslyn/bin/Release/net6.0/osx-x64
-        zip -r ../../../../../dprint-plugin-roslyn-x86_64-apple-darwin.zip ./*
-        cd ../osx.12-arm64
-        zip -r ../../../../../dprint-plugin-roslyn-aarch64-apple-darwin.zip ./*
-        cd ../linux-x64
-        zip -r ../../../../../dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip ./*
-        cd ../win-x64
-        zip -r ../../../../../dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip ./*
+        RELEASE_DIR=$GITHUB_WORKSPACE/DprintPluginRoslyn/bin/Release/net6.0
+        zip -r dprint-plugin-roslyn-x86_64-apple-darwin.zip $RELEASE_DIR/osx-x64/*
+        zip -r dprint-plugin-roslyn-aarch64-apple-darwin.zip $RELEASE_DIR/osx.12-arm64/*
+        zip -r dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip $RELEASE_DIR/linux-x64/*
+        zip -r dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip $RELEASE_DIR/win-x64/*
     - name: Create plugin file
       run: deno run --allow-read=. --allow-write=. scripts/create_plugin_file.ts
 
