--- a/.github/workflows/check_updates.yml
+++ b/.github/workflows/check_updates.yml
@@ -9,13 +9,9 @@ on:
 jobs:
   build:
     name: check updates
+    if: github.repository == 'dprint/dprint-plugin-roslyn'
     runs-on: ubuntu-latest
     timeout-minutes: 30
-
-    env:
-      CARGO_TERM_COLOR: always
-      RUST_BACKTRACE: full
-      RUSTC_FORCE_INCREMENTAL: 1
 
     steps:
       - name: Clone repository
