--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
   push:
     branches: [main]
     tags:
-    - '*'
+      - "*"
 
 jobs:
   build:
@@ -14,94 +14,93 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - uses: denoland/setup-deno@v1
-    - uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: '6.0.x'
+      - name: Checkout
+        uses: actions/checkout@v2
+      - uses: denoland/setup-deno@v1
+      - uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: "6.0.x"
 
-    - name: Build (Debug)
-      run: dotnet build DprintPluginRoslyn
+      - name: Build (Debug)
+        run: dotnet build DprintPluginRoslyn
 
-    - name: Test
-      run: dotnet test
+      - name: Test
+        run: dotnet test
 
-    - name: Test Exe
-      run: cd test && cargo test
+      - name: Test Exe
+        run: cd test && cargo test
 
-    - name: Build (Release)
-      run: |
-        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime win-x64
-        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime linux-x64
-        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime linux-arm64
-        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx-x64
-        dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx.12-arm64
+      - name: Build (Release)
+        run: |
+          dotnet build DprintPluginRoslyn -c Release --self-contained --runtime win-x64
+          dotnet build DprintPluginRoslyn -c Release --self-contained --runtime linux-x64
+          dotnet build DprintPluginRoslyn -c Release --self-contained --runtime linux-arm64
+          dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx-x64
+          dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx.12-arm64
 
-    - name: Package
-      run: |
-        RELEASE_DIR=$GITHUB_WORKSPACE/DprintPluginRoslyn/bin/Release/net6.0
-        # cd to each output directory so we only include its files
-        cd $RELEASE_DIR/osx-x64
-        zip -r ../../../../../dprint-plugin-roslyn-x86_64-apple-darwin.zip ./*
-        cd $RELEASE_DIR/osx.12-arm64
-        zip -r ../../../../../dprint-plugin-roslyn-aarch64-apple-darwin.zip ./*
-        cd $RELEASE_DIR/linux-x64
-        zip -r ../../../../../dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip ./*
-        cd $RELEASE_DIR/linux-arm64
-        zip -r ../../../../../dprint-plugin-roslyn-aarch64-unknown-linux-gnu.zip ./*
-        cd $RELEASE_DIR/win-x64
-        zip -r ../../../../../dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip ./*
-    - name: Create plugin file
-      run: deno run --allow-read=. --allow-write=. scripts/create_plugin_file.ts
+      - name: Package
+        run: |
+          RELEASE_DIR=$GITHUB_WORKSPACE/DprintPluginRoslyn/bin/Release/net6.0
+          # cd to each output directory so we only include its files
+          cd $RELEASE_DIR/osx-x64
+          zip -r ../../../../../dprint-plugin-roslyn-x86_64-apple-darwin.zip ./*
+          cd $RELEASE_DIR/osx.12-arm64
+          zip -r ../../../../../dprint-plugin-roslyn-aarch64-apple-darwin.zip ./*
+          cd $RELEASE_DIR/linux-x64
+          zip -r ../../../../../dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip ./*
+          cd $RELEASE_DIR/linux-arm64
+          zip -r ../../../../../dprint-plugin-roslyn-aarch64-unknown-linux-gnu.zip ./*
+          cd $RELEASE_DIR/win-x64
+          zip -r ../../../../../dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip ./*
+      - name: Create plugin file
+        run: deno run --allow-read=. --allow-write=. scripts/create_plugin_file.ts
 
-    - name: Get tag version
-      if: startsWith(github.ref, 'refs/tags/')
-      id: get_tag_version
-      run: echo ::set-output name=TAG_VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: Get tag version
+        if: startsWith(github.ref, 'refs/tags/')
+        id: get_tag_version
+        run: echo ::set-output name=TAG_VERSION::${GITHUB_REF/refs\/tags\//}
 
-    - name: Get plugin file checksum
-      if: startsWith(github.ref, 'refs/tags/')
-      id: get_plugin_file_checksum
-      run: echo "::set-output name=CHECKSUM::$(shasum -a 256 plugin.json | awk '{print $1}')"
+      - name: Get plugin file checksum
+        if: startsWith(github.ref, 'refs/tags/')
+        id: get_plugin_file_checksum
+        run: echo "::set-output name=CHECKSUM::$(shasum -a 256 plugin.json | awk '{print $1}')"
 
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: startsWith(github.ref, 'refs/tags/')
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        files: |
-          dprint-plugin-roslyn-x86_64-apple-darwin.zip
-          dprint-plugin-roslyn-aarch64-apple-darwin.zip
-          dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip
-          dprint-plugin-roslyn-aarch64-unknown-linux-gnu.zip
-          dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip
-          plugin.json
-        body: |
-          ## Install
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          files: |
+            dprint-plugin-roslyn-x86_64-apple-darwin.zip
+            dprint-plugin-roslyn-aarch64-apple-darwin.zip
+            dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip
+            dprint-plugin-roslyn-aarch64-unknown-linux-gnu.zip
+            dprint-plugin-roslyn-x86_64-pc-windows-msvc.zip
+            plugin.json
+          body: |
+            ## Install
 
-          In dprint configuration file:
+            In a dprint configuration file:
 
-          1. Specify the plugin url and checksum in the `"plugins"` array.
-             ```jsonc
-             {
-               // etc...
-               "plugins": [
-                 "https://plugins.dprint.dev/roslyn-${{ steps.get_tag_version.outputs.TAG_VERSION }}.json@${{ steps.get_plugin_file_checksum.outputs.CHECKSUM }}"
-               ]
-             }
-             ```
-          2. Ensure .cs and .vb file extensions are matched in an "includes" pattern.
-          3. Add a "roslyn" configuration property if desired.
-
-             ```jsonc
-             {
-               // ...etc...
-               "roslyn": {
-                 "csharp.indentBlock": false,
-                 "visualBasic.indentWidth": 2
+            1. Specify the plugin url and checksum in the `"plugins"` array or run `dprint config add roslyn`.
+               ```jsonc
+               {
+                 // etc...
+                 "plugins": [
+                   "https://plugins.dprint.dev/roslyn-${{ steps.get_tag_version.outputs.TAG_VERSION }}.json@${{ steps.get_plugin_file_checksum.outputs.CHECKSUM }}"
+                 ]
                }
-             }
-             ```
-        draft: false
+               ```
+            2. Add a "roslyn" configuration property if desired.
+
+               ```jsonc
+               {
+                 // ...etc...
+                 "roslyn": {
+                   "csharp.indentBlock": false,
+                   "visualBasic.indentWidth": 2
+                 }
+               }
+               ```
+          draft: false
