--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       - uses: denoland/setup-deno@v1
       - uses: actions/setup-dotnet@v1
         with:
-          dotnet-version: "6.0.x"
+          dotnet-version: "7.0.x"
 
       - name: Build (Debug)
         run: dotnet build DprintPluginRoslyn
@@ -36,15 +36,15 @@ jobs:
           dotnet build DprintPluginRoslyn -c Release --self-contained --runtime linux-x64
           dotnet build DprintPluginRoslyn -c Release --self-contained --runtime linux-arm64
           dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx-x64
-          dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx.12-arm64
+          dotnet build DprintPluginRoslyn -c Release --self-contained --runtime osx-arm64
 
       - name: Package
         run: |
-          RELEASE_DIR=$GITHUB_WORKSPACE/DprintPluginRoslyn/bin/Release/net6.0
+          RELEASE_DIR=$GITHUB_WORKSPACE/DprintPluginRoslyn/bin/Release/net7.0
           # cd to each output directory so we only include its files
           cd $RELEASE_DIR/osx-x64
           zip -r ../../../../../dprint-plugin-roslyn-x86_64-apple-darwin.zip ./*
-          cd $RELEASE_DIR/osx.12-arm64
+          cd $RELEASE_DIR/osx-arm64
           zip -r ../../../../../dprint-plugin-roslyn-aarch64-apple-darwin.zip ./*
           cd $RELEASE_DIR/linux-x64
           zip -r ../../../../../dprint-plugin-roslyn-x86_64-unknown-linux-gnu.zip ./*
