feat: upgrade to Microsoft.CodeAnalysis 5.0.0 (#25)

--- a/.github/workflows/check_updates.yml
+++ b/.github/workflows/check_updates.yml
@@ -15,17 +15,25 @@ jobs:
 
     steps:
       - name: Clone repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v6
         with:
           token: ${{ secrets.GH_DPRINTBOT_PAT }}
 
-      - uses: denoland/setup-deno@v1
-      - uses: actions/setup-dotnet@v1
+      - uses: denoland/setup-deno@v2
+      - uses: actions/setup-dotnet@v5
         with:
-          dotnet-version: "8.0.x"
+          dotnet-version: "10.0.x"
 
       - name: Run script
         run: |
           git config user.email "dprintbot@users.noreply.github.com"
           git config user.name "dprintbot"
           deno run -A ./scripts/update.ts
+  # This is necessary to prevent GH automatically dsiabling this workflow after 60 days.
+  workflow-keepalive:
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    permissions:
+      actions: write
+    steps:
+      - uses: liskin/gh-workflow-keepalive@f72ff1a1336129f29bf0166c0fd0ca6cf1bcb38c
